@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false

class LibraryManagementSystem {
    systemName: String
    +login(email, password)
    +checkAvailability(copyId)
    +trackOverdueBooks()
}

abstract class User {
    userId: int
    name: String
    email: String
    password: String
    +login()
    +logout()
}

class Student {
    studentId: String
    +searchBooks()
    +reserveBook(copyId)
    +viewBorrowingHistory()
}

class Librarian {
    employeeId: String
    +addBook()
    +manageBook()
    +approveRequest()
    +generateReport()
}

class Catalog {
    catalogId: int
    +searchByTitle(title)
    +searchByAuthor(author)
    +searchByCategory(category)
}

class Book {
    isbn: String
    title: String
    author: String
    category: String
    publisher: String
    +getDetails()
}

class BookCopy {
    copyId: int
    barcode: String
    status: CopyStatus
    shelfLocation: String
    +isAvailable()
}

class Reservation {
    reservationId: int
    requestDate: Date
    status: ReservationStatus
    +create()
    +cancel()
}

class Loan {
    loanId: int
    issueDate: Date
    dueDate: Date
    returnDate: Date
    status: LoanStatus
    +markReturned()
    +isOverdue()
}

class Report {
    reportId: int
    reportType: String
    generatedOn: DateTime
    +generate()
}

User <|-- Student
User <|-- Librarian
Catalog --> Book : stores
Book "1" --> "1..*" BookCopy : has
Student --> Reservation : creates
Reservation --> BookCopy : for
Student --> Loan : borrows
Librarian --> Loan : issues/receives
Loan --> BookCopy : for
Librarian --> Report : generates
LibraryManagementSystem --> User
LibraryManagementSystem --> Catalog
LibraryManagementSystem --> Loan
LibraryManagementSystem --> Reservation
LibraryManagementSystem --> Report
@enduml
